--- a/src/App.styles.css
+++ b/src/App.styles.css
@@ -1,5 +1,25 @@
 main {
     display: flex;
+    flex-direction: column;
+    height: 100vh;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.slick-slider {
+    display: flex;
     align-items: center;
-    /* justify-content: center; */
+}
+
+.heading {
+    padding: 10px 30px;
+    color: black;
+    background-color: white;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 60px;
+    font-weight: bold;
 }
