--- a/src/components/photo-card.styles.css
+++ b/src/components/photo-card.styles.css
@@ -1,19 +1,25 @@
-img{
-    height: 80vh;
+img {
+    height: 70vh;
     width: 80vw;
     object-fit: cover;
+    margin: 0 auto;
 }
 
-div {
+.card {
     position: relative;
 }
 
-h1 {
-    position:absolute;
-    top: 80%;
-    left: 30px;
+.credit {
     color: white;
+    background-color: black;
+    width: fit-content;
+    margin-left: 10%;
+    margin-right: auto;
+    position: absolute;
+    top: 75%;
+    text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 70px;
+    font-size: 60px;
     font-weight: bold;
+    padding: 10px 30px;
 }
